# Telegram

dominion-bank-bot/: .gitignore  env.example  pyproject.toml  requirements.txt  run.py
dominion-bank-bot/plan/: 00-OVERVIEW.md  01-STRUCTURE.md  02-DATABASE.md  03-COMMANDS.md  04-MESSAGES.md  05-LOGIC-FLOWS.md  06-VALIDATIONS.md  07-SETUP.md  08-DEPLOYMENT.md  09-NAMING-OPTIONS.md  10-COMMANDS-DETAIL.md  11-EXCEL-DATA-INPUT.md  11-IMPROVEMENT-PLAN.md  12-BDSM-COMMANDS.md  13-USER-PROFILES-TAGS.md  14-INITIAL-SETUP-SHEETS.md  15-ANALYSIS-IMPROVEMENTS.md  README.md
dominion-bank-bot/plan/01-foundation/: naming.md  overview.md
dominion-bank-bot/plan/02-architecture/: import-flow.md  project-structure.md
dominion-bank-bot/plan/03-database/: bdsm-tables.md  core-tables.md  profile-tables.md  relationship-tables.md  schema-overview.md  system-tables.md
dominion-bank-bot/plan/04-commands/: overview.md
dominion-bank-bot/plan/05-logic/: admin-flows.md  atomic-operations.md  core-flows.md  overview.md
dominion-bank-bot/plan/06-validation/: error-messages.md  input-validation.md  rate-limiting.md
dominion-bank-bot/plan/07-setup/: development-env.md  telegram-bot.md
dominion-bank-bot/plan/08-deployment/: add-to-group.md  railway.md
dominion-bank-bot/plan/10-reference/: analysis.md  (+1 more)
dominion-bank-bot/scripts/: clean_test_db.py
dominion-bank-bot/src/: __init__.py  config.py  main.py
dominion-bank-bot/tests/: conftest.py  test_handlers.py  test_helpers_admin.py  test_repositories_bdsm.py  test_repositories_profile.py  test_repositories_user.py  test_texts.py
(+129 files in other folders)
